Fix end-of-line token chip clipping in block mode.
Also fix another small z-index issue.

PiperOrigin-RevId: 607350268

--- a/lit_nlp/client/elements/token_chips.css
+++ b/lit_nlp/client/elements/token_chips.css
@@ -85,7 +85,27 @@
   vertical-align: baseline;
 }
 
-.tokens-holder-display-block.tokens-holder-dense .salient-token span {
+/**
+ * This is the ugliest matcher I've ever written but it seems to fix the mess
+ * that is element spacing in inline mode. In particular: with the way we use
+ * word-spacer, any token followed by one would get extra trailing whitespace, 
+ * e.g. it would appear as |word | rather than |word|, making the highlighting
+ * awkward.
+ * 
+ * It's possible to fix this by scrupulously removing whitespace from the HTML,
+ * so long as the <span> are direct siblings of the word spacer. But this all 
+ * breaks down when they're nested inside <lit-tooltip> to provide the 
+ * mouseover.
+ * 
+ * So, instead we need to add a negative margin equal to the width 
+ * of a single space, only to those .salient-token elements that are followed
+ * by a .word-spacer. Of course, CSS provides only a next-sibling combinator
+ * (+), which would work to match the .word-spacer itself - but applying
+ * margin-left there does not have the desired effect (you just get twice the 
+ * spacing). So, we hack it with the unofficial but well-supported :has() 
+ * pseudo-class to match .salient-token that "has" a next-sibling .word-spacer.
+ */ 
+.tokens-holder-display-block.tokens-holder-dense .salient-token:has(+ .word-spacer) span {
    /* hack to remove extra whitespace. ugh. */
   margin-right: -0.445ch;
 }
